Fix spacing issue in alert local RSS text.

--- a/web/cobrands/sass/_base.scss
+++ b/web/cobrands/sass/_base.scss
@@ -2461,7 +2461,7 @@ a#geolocate_link.loading, .btn--geolocate.loading {
     padding-#{$left}: 24px;
 
     // Close up space between this and #rss_local
-    margin-top: -1em;
+    margin-top: -0.5em;
 }
 
 .confirmation-header {
